--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "Mirai",
-    "version": "1.2.14",
-    "description": "A simple Facebook Messenger Bot made by me(CatalizCS) and my brother SpermLord.",
+    "name": "NemG",
+    "version": "1.3.0",
+    "description": "BOT NEMG.",
     "main": "mirai.js",
     "scripts": {
         "start": "node index",
@@ -23,6 +23,8 @@
         "caesar-salad": "^2.1.0",
         "canvas": "^2.9.0",
         "chalk": "^4.1.2",
+        "express": "^4.17.3",
+        "fast-speedtest-api": "^0.3.2",
         "cheerio": "^0.22.0",
         "cherry": "^0.23.1",
         "child_process": "^1.0.2",
@@ -35,7 +37,9 @@
         "extract-zip": "",
         "fb-chat-api": "^10.3.19",
         "fb-downloads": "^1.0.7",
-        "fb-tools": "^2.0.14",
+        "bitly": "^7.1.2",
+        "fb-tools": "^2.1.0",
+        "systeminformation": "^5.11.14",
         "fca-horizon-remake": "^4.1.3",
         "fca-unofficial": "^1.3.10",
         "figlet": "",
