--- a/package.json
+++ b/package.json
@@ -1,85 +1,107 @@
 {
-    "name": "NemG",
-    "version": "1.3.0",
-    "description": "BOT NEMG.",
-    "main": "mirai.js",
-    "scripts": {
-        "start": "node index",
-        "login": "node login",
-        "test": "node --trace-warnings --use_strict --async-stack-traces mirai"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/vannhatk03/miraiv2.git"
-    },
-    "author": "CatalizCS",
-    "license": "GPL-3.0",
-    "dependencies": {
-        "@miraipr0ject/assets": "",
-        "adm-zip": "^0.5.9",
-        "authenticator": "^1.1.5",
-        "axios": "^0.25.0",
-        "body-parser": "^1.19.2",
-        "caesar-salad": "^2.1.0",
-        "canvas": "^2.9.0",
-        "chalk": "^4.1.2",
-        "express": "^4.17.3",
-        "fast-speedtest-api": "^0.3.2",
-        "cheerio": "^0.22.0",
-        "cherry": "^0.23.1",
-        "child_process": "^1.0.2",
-        "crypto": "",
-        "discord.js": "^13.6.0",
-        "dropbox-v2-api": "^2.4.53",
-        "emoji-unicode": "^2.0.1",
-        "eval": "",
-        "extra": "^0.2.1",
-        "extract-zip": "",
-        "fb-chat-api": "^10.3.19",
-        "fb-downloads": "^1.0.7",
-        "bitly": "^7.1.2",
-        "fb-tools": "^2.1.0",
-        "systeminformation": "^5.11.14",
-        "fca-horizon-remake": "^4.1.3",
-        "fca-unofficial": "^1.3.10",
-        "figlet": "",
-        "fs": "0.0.1-security",
-        "fs-extra": "^10.0.1",
-        "fund": "^1.0.0",
-        "gender": "0.0.1",
-        "gifencoder": "^2.0.1",
-        "helyt": "",
-        "https": "^1.0.0",
-        "img": "^3.0.3",
-        "jimp": "^0.16.1",
-        "lyrics-finder": "^21.7.0",
-        "minimist": "",
-        "moment": "^2.29.1",
-        "moment-timezone": "^0.5.34",
-        "ms": "",
-        "node-notifier": "^10.0.1",
-        "node-superfetch": "^0.2.3",
-        "nodemailer": "^6.7.2",
-        "npmlog": "^6.0.1",
-        "parse-ms": "^3.0.0",
-        "path": "^0.12.7",
-        "ping-monitor": "^0.6.2",
-        "read": "^1.0.7",
-        "readline": "",
-        "request": "",
-        "root": "^3.2.0",
-        "semver": "",
-        "sequelize": "^6.17.0",
-        "shiron": "^1.3.18",
-        "shuffle-array": "^1.0.1",
-        "simple-youtube-api": "^5.2.1",
-        "sqlite3": "",
-        "string": "^3.3.3",
-        "string-similarity": "^4.0.4",
-        "stringify": "^5.2.0",
-        "tinyurl": "^1.1.7",
-        "to-zalgo": "^1.0.1",
-        "totp-generator": "",
-        "ytdl-core": "^4.10.1"
-    }
+	"name": "NemG",
+	"version": "1.3.15",
+	"description": "A simple Facebook Messenger Bot made by me(CatalizCS) and my brother SpermLord.",
+	"main": "mirai.js",
+	"scripts": {
+		"start": "node index",
+		"login": "node login",
+		"test": "node --trace-warnings --use_strict --async-stack-traces mirai"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/miraipr0ject/miraiv2.git"
+	},
+	"keywords": [
+		"bot",
+		"facebook",
+		"projectmirai",
+		"messenger",
+		"mirai",
+		"catalizcs",
+		"spermlord",
+		"miraipr0ject"
+	],
+	"author": "CatalizCS & SpermLord",
+	"license": "GPL-3.0",
+	"bugs": {
+		"url": "https://github.com/miraipr0ject/miraiv2/issues"
+	},
+	"homepage": "https://github.com/miraipr0ject/miraiv2#readme",
+	"dependencies": {
+		"@ffmpeg-installer/ffmpeg": "^1.1.0",
+		"@miraipr0ject/assets": "",
+		"@replit/database": "^2.0.2",
+		"aes-js": "^3.1.2",
+		"audit": "^0.0.6",
+		"axios": "^0.27.2",
+		"body-parser": "^1.20.0",
+		"caesar-salad": "",
+		"canvas": "^2.10.1",
+		"chalk": "^4.1.2",
+		"chalk-cli": "^5.0.0",
+		"chalkercli": "^1.6.4",
+		"cheerio": "^1.0.0-rc.12",
+		"child_process": "",
+		"crypto-js": "^4.1.1",
+		"eval": "",
+		"express": "^4.18.2",
+		"extract-zip": "",
+		"fast-speedtest-api": "^0.3.2",
+		"fb-downloads": "^1.0.7",
+		"fb-tools": "^2.1.0",
+		"fb-xuyen-get": "^2.6.0",
+		"fca-disme": "^3.2.5",
+		"fca-horizon-remake": "^31.20.8",
+		"fca-unofficial": "^1.3.0",
+		"figlet": "",
+		"fix": "^0.0.3",
+		"fluent-ffmpeg": "^2.1.2",
+		"form-data": "^4.0.0",
+		"form-urlencoded": "^6.0.6",
+		"fs": "^0.0.1-security",
+		"fs-extra": "^10.1.0",
+		"gifencoder": "^2.0.1",
+		"helyt": "^1.3.16",
+		"https": "^1.0.0",
+		"image-downloader": "^4.3.0",
+		"img": "^3.0.3",
+		"imgur": "^2.2.0",
+		"javascript-obfuscator": "^4.0.0",
+		"jimp": "^0.16.1",
+		"lyrics-finder": "^21.7.0",
+		"moment": "^2.29.4",
+		"moment-timezone": "^0.5.38",
+		"ms": "^2.1.3",
+		"node": "^16.0.0",
+		"node-fetch": "^2.6.6",
+		"node-notifier": "^10.0.1",
+		"node-superfetch": "^0.3.3",
+		"nodemailer": "6.0",
+		"npm": "^8.19.1",
+		"npmlog": "^6.0.2",
+		"pastebin-api": "^4.0.1",
+		"path": "^0.12.7",
+		"pidusage": "^3.0.1",
+		"qrcode": "^1.5.1",
+		"random": "^3.0.6",
+		"readline": "^1.3.0",
+		"request": "^2.88.2",
+		"root": "^3.2.0",
+		"semver": "^7.3.7",
+		"sequelize": "^6.18.0",
+		"simple-youtube-api": "^5.2.1",
+		"sqlite3": "^5.1.2",
+		"srod-v2": "^1.0.2",
+		"string-similarity": "^4.0.4",
+		"synthetic-horizon-database": "^1.2.3",
+		"systeminformation": "^5.12.7",
+		"tinyurl": "^1.1.7",
+		"tools-fb": "^1.0.7",
+		"totp-generator": "0.0.13",
+		"tslib": "^2.4.1",
+		"turl": "^1.1.2",
+		"youtube-search-api": "^1.1.0",
+		"ytdl-core": "^4.11.2"
+	}
 }
