--- a/package.json
+++ b/package.json
@@ -1,107 +1,76 @@
 {
-	"name": "NemG",
-	"version": "1.3.15",
-	"description": "A simple Facebook Messenger Bot made by me(CatalizCS) and my brother SpermLord.",
-	"main": "mirai.js",
-	"scripts": {
-		"start": "node index",
-		"login": "node login",
-		"test": "node --trace-warnings --use_strict --async-stack-traces mirai"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/miraipr0ject/miraiv2.git"
-	},
-	"keywords": [
-		"bot",
-		"facebook",
-		"projectmirai",
-		"messenger",
-		"mirai",
-		"catalizcs",
-		"spermlord",
-		"miraipr0ject"
-	],
-	"author": "CatalizCS & SpermLord",
-	"license": "GPL-3.0",
-	"bugs": {
-		"url": "https://github.com/miraipr0ject/miraiv2/issues"
-	},
-	"homepage": "https://github.com/miraipr0ject/miraiv2#readme",
-	"dependencies": {
-		"@ffmpeg-installer/ffmpeg": "^1.1.0",
-		"@miraipr0ject/assets": "",
-		"@replit/database": "^2.0.2",
-		"aes-js": "^3.1.2",
-		"audit": "^0.0.6",
-		"axios": "^0.27.2",
-		"body-parser": "^1.20.0",
-		"caesar-salad": "",
-		"canvas": "^2.10.1",
-		"chalk": "^4.1.2",
-		"chalk-cli": "^5.0.0",
-		"chalkercli": "^1.6.4",
-		"cheerio": "^1.0.0-rc.12",
-		"child_process": "",
-		"crypto-js": "^4.1.1",
-		"eval": "",
-		"express": "^4.18.2",
-		"extract-zip": "",
-		"fast-speedtest-api": "^0.3.2",
-		"fb-downloads": "^1.0.7",
-		"fb-tools": "^2.1.0",
-		"fb-xuyen-get": "^2.6.0",
-		"fca-disme": "^3.2.5",
-		"fca-horizon-remake": "^31.20.8",
-		"fca-unofficial": "^1.3.0",
-		"figlet": "",
-		"fix": "^0.0.3",
-		"fluent-ffmpeg": "^2.1.2",
-		"form-data": "^4.0.0",
-		"form-urlencoded": "^6.0.6",
-		"fs": "^0.0.1-security",
-		"fs-extra": "^10.1.0",
-		"gifencoder": "^2.0.1",
-		"helyt": "^1.3.16",
-		"https": "^1.0.0",
-		"image-downloader": "^4.3.0",
-		"img": "^3.0.3",
-		"imgur": "^2.2.0",
-		"javascript-obfuscator": "^4.0.0",
-		"jimp": "^0.16.1",
-		"lyrics-finder": "^21.7.0",
-		"moment": "^2.29.4",
-		"moment-timezone": "^0.5.38",
-		"ms": "^2.1.3",
-		"node": "^16.0.0",
-		"node-fetch": "^2.6.6",
-		"node-notifier": "^10.0.1",
-		"node-superfetch": "^0.3.3",
-		"nodemailer": "6.0",
-		"npm": "^8.19.1",
-		"npmlog": "^6.0.2",
-		"pastebin-api": "^4.0.1",
-		"path": "^0.12.7",
-		"pidusage": "^3.0.1",
-		"qrcode": "^1.5.1",
-		"random": "^3.0.6",
-		"readline": "^1.3.0",
-		"request": "^2.88.2",
-		"root": "^3.2.0",
-		"semver": "^7.3.7",
-		"sequelize": "^6.18.0",
-		"simple-youtube-api": "^5.2.1",
-		"sqlite3": "^5.1.2",
-		"srod-v2": "^1.0.2",
-		"string-similarity": "^4.0.4",
-		"synthetic-horizon-database": "^1.2.3",
-		"systeminformation": "^5.12.7",
-		"tinyurl": "^1.1.7",
-		"tools-fb": "^1.0.7",
-		"totp-generator": "0.0.13",
-		"tslib": "^2.4.1",
-		"turl": "^1.1.2",
-		"youtube-search-api": "^1.1.0",
-		"ytdl-core": "^4.11.2"
-	}
+    "name": "NemG",
+    "version": "1.3.0",
+    "description": "NemG",
+    "main": "main.js",
+    "scripts": {
+        "start": "node index",
+        "login": "node login",
+        "test": "node --trace-warnings --use_strict --async-stack-traces main"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/quyenkaneki/miraibot.git"
+    },
+    "author": "Kaneki",
+    "license": "GPL-3.0",
+    "dependencies": {
+        "@miraipr0ject/assets": "",
+        "aes-js": "^3.1.2",
+        "axios": "^0.26.1",
+        "bitly": "^7.1.2",
+        "bluebird": "^3.7.2",
+        "caesar-salad": "",
+        "canvas": "^2.9.1",
+        "chalk": "^4.1.2",
+        "cheerio": "^1.0.0-rc.10",
+        "child_process": "",
+        "cors": "^2.8.5",
+        "crypto": "",
+        "emoji-unicode": "^2.0.1",
+        "eval": "",
+        "express": "^4.17.3",
+        "fast-speedtest-api": "^0.3.2",
+        "fb-tools": "^2.1.0",
+        "fca-kaneki": "^1.2.9",
+        "fs-extra": "^10.0.1",
+        "gif-frames": "^1.0.1",
+        "gifencoder": "^2.0.1",
+        "got": "^12.0.4",
+        "helmet": "^5.0.2",
+        "jimp": "",
+        "lyrics-finder": "^21.7.0",
+        "meewmeewapi": "^1.0.5",
+        "moment": "^2.29.1",
+        "moment-timezone": "",
+        "node-superfetch": "^0.2.3",
+        "npmlog": "^6.0.1",
+        "path": "",
+        "pidusage": "^3.0.0",
+        "prompt-sync": "^4.2.0",
+        "qrcode": "^1.5.0",
+        "random": "^3.0.6",
+        "request": "",
+        "requests": "^0.3.0",
+        "sagiri": "^3.1.1",
+        "semver": "",
+        "sequelize": "^6.17.0",
+        "simple-youtube-api": "",
+        "sqlite3": "^5.0.2",
+        "string-similarity": "",
+        "systeminformation": "^5.11.14",
+        "tesseract.js": "^2.1.5",
+        "tinyurl": "^1.1.7",
+        "totp-generator": "^0.0.13",
+        "wikijs": "^6.3.3",
+        "ytdl-core": "^4.11.0"
+    },
+    "bugs": {
+        "url": "https://github.com/quyenkaneki/miraibot/issues"
+    },
+    "homepage": "https://github.com/quyenkaneki/miraibot#readme",
+    "devDependencies": {
+        "node": "^12.22.10"
+    },
+    "keywords": []
 }
