--- a/package.json
+++ b/package.json
@@ -12,58 +12,57 @@
         "type": "git",
         "url": "git+https://github.com/quyenkaneki/miraibot.git"
     },
-    "author": "Kaneki",
+    "author": "NemG",
     "license": "GPL-3.0",
     "dependencies": {
         "@miraipr0ject/assets": "",
-        "aes-js": "^3.1.2",
-        "axios": "^0.26.1",
-        "bitly": "^7.1.2",
-        "bluebird": "^3.7.2",
+        "aes-js": "",
+        "axios": "",
+        "bitly": "",
+        "bluebird": "",
         "caesar-salad": "",
-        "canvas": "^2.9.1",
-        "chalk": "^4.1.2",
-        "cheerio": "^1.0.0-rc.10",
+        "canvas": "",
+        "chalk": "",
+        "cheerio": "",
         "child_process": "",
-        "cors": "^2.8.5",
+        "cors": "",
         "crypto": "",
-        "emoji-unicode": "^2.0.1",
+        "emoji-unicode": "",
         "eval": "",
-        "express": "^4.17.3",
-        "fast-speedtest-api": "^0.3.2",
-        "fb-tools": "^2.1.0",
-        "fca-kaneki": "^1.2.9",
-        "fs-extra": "^10.0.1",
-        "gif-frames": "^1.0.1",
-        "gifencoder": "^2.0.1",
-        "got": "^12.0.4",
-        "helmet": "^5.0.2",
+        "express": "",
+        "fast-speedtest-api": "",
+        "fb-tools": "",
+        "fs-extra": "",
+        "gif-frames": "",
+        "gifencoder": "",
+        "got": "",
+        "helmet": "",
         "jimp": "",
-        "lyrics-finder": "^21.7.0",
-        "meewmeewapi": "^1.0.5",
-        "moment": "^2.29.1",
+        "lyrics-finder": "",
+        "moment": "",
         "moment-timezone": "",
-        "node-superfetch": "^0.2.3",
-        "npmlog": "^6.0.1",
+        "node-superfetch": "",
+        "npmlog": "",
         "path": "",
-        "pidusage": "^3.0.0",
-        "prompt-sync": "^4.2.0",
-        "qrcode": "^1.5.0",
-        "random": "^3.0.6",
+        "pidusage": "",
+        "prompt-sync": "",
+        "qrcode": "",
+        "random": "",
         "request": "",
-        "requests": "^0.3.0",
-        "sagiri": "^3.1.1",
+        "requests": "",
+        "sagiri": "",
         "semver": "",
-        "sequelize": "^6.17.0",
+        "sequelize": "",
         "simple-youtube-api": "",
-        "sqlite3": "^5.0.2",
+        "sqlite3": "",
         "string-similarity": "",
-        "systeminformation": "^5.11.14",
-        "tesseract.js": "^2.1.5",
-        "tinyurl": "^1.1.7",
-        "totp-generator": "^0.0.13",
-        "wikijs": "^6.3.3",
-        "ytdl-core": "^4.11.0"
+        "systeminformation": "",
+        "tesseract.js": "",
+        "tinyurl": "",
+        "totp-generator": "",
+        "wikijs": "",
+        "ytdl-core": "",
+        "sqlite3": "",
     },
     "bugs": {
         "url": "https://github.com/quyenkaneki/miraibot/issues"
