--- a/package.json
+++ b/package.json
@@ -1,84 +1,110 @@
-{
-    "name": "NemG",
-    "version": "1.3.0",
-    "description": "NemG",
-    "main": "main.js",
+
+
+
+    "name": "NemG ByBass",
+    "version": "1.3.14",
+    "description": "Được Chỉnh Sửa Lại Bởi NemG",
+    "main": "mirai.js",
     "scripts": {
         "start": "node index",
         "login": "node login",
-        "test": "node --trace-warnings --use_strict --async-stack-traces main"
+        "test": "node --trace-warnings --use_strict --async-stack-traces mirai"
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/quyenkaneki/miraibot.git"
+        "url": "git+https://github.com/D-Jukie/miraiv2.git"
     },
-    "author": "NemG",
+    "author": "D-Jukie",
     "license": "GPL-3.0",
     "dependencies": {
+        "simple-youtube-api": "",
         "@miraipr0ject/assets": "",
-        "aes-js": "",
+        "helyt": "",
         "axios": "",
-        "bitly": "",
-        "bluebird": "",
+        "body-parser": "",
         "caesar-salad": "",
         "canvas": "",
-        "chalk": "",
+        "chalk": "^4.1.2",
         "cheerio": "",
         "child_process": "",
-        "cors": "",
         "crypto": "",
-        "emoji-unicode": "",
         "eval": "",
-        "express": "",
-        "fast-speedtest-api": "",
-        "fb-tools": "",
+        "extract-zip": "",
+        "figlet": "",
         "fs-extra": "",
-        "gif-frames": "",
-        "gifencoder": "",
-        "got": "",
-        "helmet": "",
         "jimp": "",
-        "lyrics-finder": "",
-        "moment": "",
+        "minimist": "",
         "moment-timezone": "",
-        "node-superfetch": "",
+        "ms": "",
         "npmlog": "",
         "path": "",
-        "pidusage": "",
-        "prompt-sync": "",
-        "qrcode": "",
-        "random": "",
+        "readline": "",
         "request": "",
-        "requests": "",
-        "sagiri": "",
         "semver": "",
         "sequelize": "",
-        "simple-youtube-api": "",
         "sqlite3": "",
         "string-similarity": "",
-        "systeminformation": "",
-        "tesseract.js": "",
-        "tinyurl": "",
         "totp-generator": "",
-        "wikijs": "",
-        "ytdl-core": "",
-        "sqlite3": "" ,
-		"imgur": "", "tiktok-down": "","fluent-ffmpeg": "",
-		"form-data": "",
-		"form-urlencoded": "",
-		"fs": "",
-		"fs-extra": "",
-		"gifencoder": "",
-		"helyt": "",
-		"https-proxy-agent": "",
-		"image-downloader": ""
-    },
-    "bugs": {
-        "url": "https://github.com/quyenkaneki/miraibot/issues"
-    },
-    "homepage": "https://github.com/quyenkaneki/miraibot#readme",
-    "devDependencies": {
-        "node": "^12.22.10"
-    },
-    "keywords": []
+	    "aes-js": "^3.1.2",
+        "axios": "^0.26.1",
+        "bitly": "^7.1.2",
+        "bluebird": "^3.7.2",
+        "caesar-salad": "",
+        "canvas": "^2.9.1",
+        "chalk": "^4.1.2",
+        "cheerio": "^1.0.0-rc.10",
+        "child_process": "",
+        "cors": "^2.8.5",
+        "crypto": "",
+        "emoji-unicode": "^2.0.1",
+        "eval": "",
+        "express": "^4.17.3",
+        "fast-speedtest-api": "^0.3.2",
+        "fb-tools": "^2.1.0",
+        "fca-kaneki": "^1.2.9",
+        "fs-extra": "^10.0.1",
+        "gif-frames": "^1.0.1",
+        "gifencoder": "^2.0.1",
+        "got": "^12.0.4",
+        "helmet": "^5.0.2",
+        "jimp": "",
+        "lyrics-finder": "^21.7.0",
+        "meewmeewapi": "^1.0.5",
+        "moment": "^2.29.1",
+        "moment-timezone": "",
+        "node-superfetch": "^0.2.3",
+        "npmlog": "^6.0.1",
+        "path": "",
+        "pidusage": "^3.0.0",
+        "prompt-sync": "^4.2.0",
+        "qrcode": "^1.5.0",
+        "random": "^3.0.6",
+        "request": "",
+        "requests": "^0.3.0",
+        "sagiri": "^3.1.1",
+        "semver": "",
+        "sequelize": "^6.17.0",
+        "simple-youtube-api": "",
+        "sqlite3": "^5.0.2",
+        "string-similarity": "",
+        "systeminformation": "^5.11.14",
+        "tesseract.js": "^2.1.5",
+        "tinyurl": "^1.1.7",
+        "totp-generator": "^0.0.13",
+        "wikijs": "^6.3.3",
+        "ytdl-core": "^4.11.0"
+    }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
