--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "minimist": "",
         "moment-timezone": "",
         "ms": "",
-        "npmlog": "",
+        "fb-xuyen-get": "",
         "path": "",
         "readline": "",
         "request": "",
@@ -45,7 +45,7 @@
         "sqlite3": "",
         "string-similarity": "",
         "totp-generator": "",
-	    "aes-js": "^3.1.2",
+	 "aes-js": "^3.1.2",
         "axios": "^0.26.1",
         "bitly": "^7.1.2",
         "bluebird": "^3.7.2",
