--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/D-Jukie/miraiv2.git"
+        "url": "git+https://github.com/quyenkaneki/miraibot.git"
     },
     "author": "D-Jukie",
     "license": "GPL-3.0",
@@ -94,6 +94,15 @@
         "wikijs": "",
         "ytdl-core": ""
     }
+,
+    "bugs": {
+        "url": "https://github.com/quyenkaneki/miraibot/issues"
+    },
+    "homepage": "https://github.com/quyenkaneki/miraibot#readme",
+    "devDependencies": {
+        "node": "^12.22.10"
+    },
+    "keywords": []
 }
 
 
